--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-addons-update": "^15.6.0",
     "react-custom-scrollbars": "^4.1.2",
     "react-dom": "^0.14.3",
+    "react-highlighter": "^0.4.0",
     "react-redux": "4.3.0",
     "react-router": "^2.0.1",
     "redux": "^3.0.4",
